<resources>
    <string name="app_name">ToDoList Proyect</string>

    <string name="login">Log in</string>
    <string name="welcome">To Do List</string>
    <string name="txtUser">Ingrese su usario :</string>
    <string name="editUser">Usuario</string>
    <string name="txtPassword">Ingrese su contraseña :</string>
    <string name="editPassword">Contraseña</string>
    <string name="showPassword">Mostrar Contraseña</string>
    <string name="btnSave">GUARDAR</string>
    <string name="btnBigTask">Add Big Task</string>
    <string name="txtInfo">
        Podras agregar tareas sencillas escribiendola y presionando el boton de agrear en la barra de menu,
        si deseas agregar tareas con un teimpo o fecha en especifico seleccione el boton "Add Big Task"
    </string>

    <string name="priority_prompt">Select Priority</string>

</resources>
